--- a/cookbooks/README
+++ b/cookbooks/README
@@ -1,1 +1,4 @@
 This directory contains upstream or shared cookbooks.
+
+To replace this with a Git repository, remove this directory and
+clone the upstream repository.
